--- a/src/ratpack/public/index.html
+++ b/src/ratpack/public/index.html
@@ -7,6 +7,7 @@
     <link   type="image/png" href="images/favicon.png" rel="icon" sizes="16x16" >
     <link   type="text/css"  href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link   type="text/css"  href="css/style.css" rel="stylesheet">
+    <link   type="text/css"  href="css/forms.css" rel="stylesheet">
     <link   type="text/css"  href="css/sidebar.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
@@ -51,6 +52,8 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-cookies.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
+    <script type="text/javascript" src="filters.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="views/rules/rules.js"></script>
     <script type="text/javascript" src="views/queue/queue.js"></script>
