--- a/src/ratpack/public/index.html
+++ b/src/ratpack/public/index.html
@@ -24,9 +24,13 @@
       <div id="sidebar-wrapper" ng-controller="PageController">
         <ul class="sidebar-nav">
           <li class="sidebar-brand"><a href="#/rules"><img src="images/logo.png"></a></li>
+          <li class="section">CURRENT CONTEST</li>
           <li><a href="#/rules" ng-class="{ selected: isActive('/rules') }">Rules</a></li>
           <li><a href="#/queue" ng-class="{ selected: isActive('/queue') }">Submit test request</a></li>
           <li><a href="#/results" ng-class="{ selected: isActive('/results') }">Test results</a></li>
+          <li class="section">OTHER CONTESTS</li>
+          <li><a href="#/cloudopoly1" ng-class="{ selected: isActive('/cloudopoly1') }">Cloudopoly #1</a></li>
+          <li><a href="#/cloudopoly2" ng-class="{ selected: isActive('/cloudopoly2') }">Cloudopoly #2</a></li>
         </ul>
       </div>
       <!-- /#sidebar-wrapper -->
